--- a/src/buse/CMakeLists.txt
+++ b/src/buse/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ggdb3 -pedantic -Wall -Wextra")
 
 add_library(buse STATIC buse.c)
+target_include_directories(buse PUBLIC .)
