--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,9 @@ add_executable(buse_nfs src/main.cpp)
 # Use precompiled headers
 target_precompile_headers(buse_nfs PRIVATE src/pch.h)
 
-add_subdirectory(src/loguru)
+add_subdirectory(src/busemanager)
 add_subdirectory(src/cxxopts)
+add_subdirectory(src/loguru)
 add_subdirectory(src/buse)
 
-target_link_libraries(buse_nfs PRIVATE loguru::loguru cxxopts::cxxopts buse)
+target_link_libraries(buse_nfs PRIVATE loguru::loguru cxxopts::cxxopts buse busemanager)
